CHANGELOG
=========


2021-08-08
----------
### Changelog extractor
* Add confluence syntax support for workrave (fixes #10).
* Optimize previous-version-detection and add tests (fixes #9).
* Download and convert changelog from GitHub commit history if appropriate and possible.

### Specfile
* Helper: Detect GitHub tag prefix from source URL.

2021-08-04
----------
### Specfile
* Version updater: Convert command line arguments to optional parameters.
* Version updater: Give text output if no source tag could be detected automatically.

2021-07-18
----------
### Changelog extractor
* Better detect previous version.
* Archives: Support tar.bz2 and exclude .asc files automatically.
* Refactor and fix debian conversion and add tests for it.
* Helpers: Split source url from filename extraction.

2021-07-17
----------
### Specfile
* Helper: get_source_filename can handle multiple sources.
* Helper: get_source_filename version argument is optional now.
* Version updater: handle multiple sources.

2021-07-16
----------
### Specfile
* Rewrite version detection to regex instead of rpmspec.

### libraries.io latest version
* Handle error when library is not found with error message.

### Common
* Software name detection: handle the 'python3-' prefix as well.

### Changelog extractor
* Also detect "NEWS" files.
* Check if the changelog candidates are files.
* Better and more generic conversion for MarkDown.

2021-07-04
----------
### Changelog extractor
* Markdown: Support for isort
* Removed isort-flavor

2021-07-03
----------
### Base
* Rewrite config file parser to single file.
* New file `helpers` in common directory to detect the software name.

### Specfile Version Updater
* New script to update the version in the spec file, remove the old tarball and add the new one.

### Libraries.io latest version
* New script to fetch latest version of a software from libraries.io.

### Changelog extractor
* Add support for time-machine changelogs (rst).
* Tests: add tests for base.